kubernetes/apps/network/echo-server/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: network
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: echo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo-server
    spec:
      containers:
        - name: echo-server
          image: "ghcr.io/mendhak/http-https-echo:38@sha256:c73e039e883944a38e37eaba829eb9a67641cd03eff868827683951feceef96e"
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 5m
              memory: 30M
            limits:
              memory: 30M
