kubernetes/apps/network/echo-server/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: network
spec:
  selector:
    app.kubernetes.io/name: echo-server
  ports:
    - name: http
      port: 8080
      targetPort: http
