kubernetes/apps/network/echo-server/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server
  namespace: network
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "echo-server.${cluster_domain}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forwardauth
      backendRefs:
        - name: echo-server
          port: 8080
